Proper wrapping of all client-side username handling in user-item class fixing word wrap issues.

--- a/static/stream.css
+++ b/static/stream.css
@@ -150,5 +150,4 @@ div.server-message {
   border-radius: 10px;
   padding-left: 5px;
   padding-right: 5px;
-  white-space: nowrap;
 }
